Thu Sep  9 00:10:40 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gstrfuncs.h: 
	* glib/gstrfuncs.c (g_strv_length): Add a function to 
	calculate the length of a NULL-terminated string 
	array.  (#150455, Tim-Philipp Müller)

	* tests/strfunc-test.c (main): Add a test for g_strv_length().

2004-09-08  Tor Lillqvist  <tml@iki.fi>

	* glib/gutils.c (guess_category_value): On Win32, as last resort
	call g_win32_getlocale() to get the current thread locale. There
	usually aren't any POSIXish LANG or LC_* environment variables
	present on Windows machines.

	* glib/glib.def: Add g_get_language_names.

2004-09-07  Matthias Clasen  <mclasen@redhat.com>

	* glib/gutils.h: 
	* glib/gutils.c (g_get_language_names): Add a function to
	return a list of applicable locale names.  (#95587, 
	Hidetoshi Tajima)
	(guess_category_value, compute_locale_variants):
	(explode_locale, unalias_lang, read_aliases): Helper 
	functions for g_get_language_names()

	* tests/testglib.c (main): Show the results of 
	g_get_language_names()

Sun Sep  5 01:46:11 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/glib.def: 
	* glib/gmessages.h: 
	* glib/gmessages.c (g_log_set_default_handler): New
	function to install an alternate default log 
	handler.  (#66387, Darin Adler)

2004-09-03  Tor Lillqvist  <tml@iki.fi>

	* glib/glib.def: Update.

Wed Sep  1 20:22:39 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gdate.h:
	* glib/gdate.c (g_date_get_iso8601_week_of_year): Add
	a function to calculate the ISO 8601 week number of 
	a date.  (#92579, Niklas Lundell)

2004-09-01  Anders Carlsson  <andersca@gnome.org>

	* glib/goption.c: (g_option_context_parse):
	Set program name before calling the pre-parse hooks.
	
2004-09-01  Anders Carlsson  <andersca@gnome.org>

	* glib/goption.c: (g_option_context_free), (print_help),
	(g_option_context_parse):
	Handle option contexts without a main group.
	
	* tests/option-test.c: (empty_test2), (main):
	Add test case for that.
	