@@ -125,7 +125,12 @@ returned.
 
 <!-- ##### FUNCTION g_get_home_dir ##### -->
 <para>
-Gets the current user's home directory.
+Gets the current user's home directory. 
+</para>
+<para>
+Note that in contrast to traditional Unix tools, this function 
+prefers <filename>passwd</filename> entries over the <envar>HOME<envar> 
+environment variable.
 </para>
 
 @Returns: the current user's home directory.
